# subxt_test

./: Cargo.toml  README.md
artifacts/: westmint.scale
src/: main.rs
